# q3map2

./: CMakeLists.txt  LICENSE  README.org
libs/stream/: textstream.h
tools/quake3/: CMakeLists.txt
tools/quake3/q3map2/: image.c
